# wrongthink

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SynchronizedChannel.cpp  SynchronizedChannel.h  Util.cpp  Util.h  WrongthinkServiceImpl.cpp  WrongthinkServiceImpl.h  build.sh  docker-compose.yml  test_client.cpp  wrongthink.cpp
Authentication/: WrongthinkTokenAuthenticator.cpp  WrongthinkTokenAuthenticator.h
DB/: DBInterface.cpp  DBInterface.h  DBPostgres.cpp  DBPostgres.h  DBSQLite.cpp  DBSQLite.h
Interceptors/: Interceptor.cpp  Interceptor.h
grpc_gen/: wrongthink.grpc.pb.cc  wrongthink.grpc.pb.h  wrongthink.pb.cc  wrongthink.pb.h
include/: WrongthinkConfig.h.in
src/: main.cpp
test/: rpc_tests.cpp
